--- a/src/App.css
+++ b/src/App.css
@@ -482,7 +482,8 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 }
 
 #img {
-    background: url("https://github.com/kiruthika-t/My_portfolio/public/Photo.jpeg");
+    background: url("https://raw.githubusercontent.com/kiruthika-t/My_portfolio/main/public/Photo.jpeg");
+
     background-size: cover;
     width: 200px;
     height: 200px;
