--- a/src/App.css
+++ b/src/App.css
@@ -482,7 +482,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 }
 
 #img {
-    background: url("https://github.com/kiruthika-t/My_portfolio/blob/main/src/Photo.jpeg");
+    background: url("https://github.com/kiruthika-t/My_portfolio/blob/main/public/Photo.jpeg?raw=true");
     background-size: cover;
     width: 200px;
     height: 200px;
