--- a/src/App.css
+++ b/src/App.css
@@ -482,8 +482,8 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 }
 
 #img {
-    background: url("https://avatars.githubusercontent.com/u/39455174?s=460&u=e9f5cb2f91f075ed2d21a194c012a73732a35b73&v=4");  
-    background-size: cover;
+    background: url("/src/Photo.jpeg");  
+    background-size: cover; 
     width: 200px;
     height: 200px;
     margin: 0 auto;
